# rompy-xbeach

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/rompy_xbeach/: __init__.py  boundary.py  cli.py  config.py  data.py  forcing.py  grid.py  interpolate.py  source.py  types.py
src/rompy_xbeach/components/: boundary.py  forcing.py
src/rompy_xbeach/templates/base/{{runtime.run_id}}/: params.txt
src/rompy_xbeach/templates/base/{{runtime.run_id}}/input/: README.rst
src/rompy_xbeach/templates/base/{{runtime.run_id}}/output/: README.rst
src/rompy_xbeach/templates/base/{{runtime.staging_dir}}/: params.txt
tests/: __init__.py  test_accessor.py  test_boundary.py  test_config.py  test_config.yml  test_data.py  test_forcing.py  test_grid.py  test_rompy_xbeach.py  test_source.py
tests/data/: aus-20230101.nc  bathy.nc  bathy.tif  catalog.yaml  era5-20230101.nc  gridded_wave_parameters.nc  smc-params-20230101.nc  smc-params.nc  ssh.csv  ssh_gridded.nc  ssh_stations.nc  tide_cons_station.csv  wave-params-20230101.csv  wind.csv  ww3-spectra-20230101-short.nc
tests/data/swaus_tide_cons/: grid_m2s2n2k2k1o1p1q1mmmf  h_m2s2n2k2k1o1p1q1mmmf  model_m2s2n2k2k1o1p1q1mmmf  u_m2s2n2k2k1o1p1q1mmmf
