[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rompy_xbeach"
version = "0.1.0"
description = "Rompy Xbeach Config package."
readme = "README.rst"
authors = [
  {name = "Rompy Developers", email = "developers@rompy.com"}
]
maintainers = [
  {name = "Rompy Developers", email = "developers@rompy.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  # "rompy",
  "rioxarray",
  "rompy @ git+https://github.com/rom-py/rompy.git@main",
  "pyschism @ git+https://github.com/oceanum/pyschism.git", # Needed until schism is split from rompy
  "oceantide",
  "typer",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff"
]

[project.scripts]
rompy_xbeach = "rompy_xbeach.cli:app"

[project.entry-points."rompy.config"]
xbeach = "rompy_xbeach.config:Config"

[project.entry-points."xbeach.source"]
"geotiff:crs" = "rompy_xbeach.source:SourceGeotiff"
"xyz:crs" = "rompy_xbeach.source:SourceXYZ"
"dataset:crs" = "rompy_xbeach.source:SourceCRSDataset"
"file:crs" = "rompy_xbeach.source:SourceCRSFile"
"intake:crs" = "rompy_xbeach.source:SourceCRSIntake"
"tide_station_csv:tide_station" = "rompy_xbeach.source:SourceTideStationCSV"

[project.entry-points."xbeach.interpolator"]
regular_grid = "rompy_xbeach.interpolate:RegularGridInterpolator"

[project.urls]
bugs = "https://github.com/rom-py/rompy_xbeach/issues"
changelog = "https://github.com/rom-py/rompy_xbeach/blob/master/changelog.md"
homepage = "https://github.com/rom-py/rompy_xbeach"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]
